Alteração no background do header

--- a/styles/footer.less
+++ b/styles/footer.less
@@ -21,7 +21,8 @@
 	background-color: @bg-base;
 	border-bottom: @bg-border;
 	background-image: url('/public/journals/2/background-portal-makunaima.png');
-	background-size: auto;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .pkp_structure_footer {
