--- a/styles/head.less
+++ b/styles/head.less
@@ -16,7 +16,8 @@
 	background-color: @bg-base;
 	border-bottom: @bg-border;
 	background-image: url('/public/journals/2/background-portal-makunaima.png');
-	background-size: auto;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .pkp_head_wrapper {
@@ -100,7 +101,8 @@
 	position: absolute;
 	width: 100%;
 	top: 100%;
-	background:@bg-base;
+	/*background:@bg-base;*/
+	background: transparent;
 	left: 0;
 	padding: @base;
 	z-index: 9999;
